--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Backbone <-> Firebase 0.0.1
 
-Note: This was inspired by the Backpusher repository (https://github.com/pusher/backpusher).
+This script does two things:
 
-This Backbone extension is designed to help store models / collections in Firebase.
+* Overloads Backbone.sync to use Firebase instead of AJAX.
+* Adds a BackboneFirebase object which keeps a collection in sync with Firebase
 
